--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: java
-jdk: oraclejdk9
-script: ant build
+sudo: false
+jdk:
+- oraclejdk8
+email: false
+branches:
+ only:
+ - master
+ant: run
